--- a/week2/html5/index.html
+++ b/week2/html5/index.html
@@ -29,7 +29,16 @@
     <span >Hello World </span>
  
 </div>
-<div><h5> Hello World</h5></div>
+<div><h5> Hello World</h5>
+<ol>
+    <li>Coffe</li>
+    <ol>TEA</ol>
+    <ol>Milk</ol>
+</div>
+<ul>
+    <li>coffe</li>
+    <li>milk</li>
+</ul>
 <div><h6> Hello World</h6></div>
 
  
