--- a/week2/html5/index.html
+++ b/week2/html5/index.html
@@ -7,8 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-<div><h1> Hello World</h1>
-    <img src="https://pngimg.com/uploads/cowboy_hat/cowboy_hat_PNG45.png" width="20px">
+<div> <!---- Block ---> 
+
+    <h1> Hello World</h1> <!--- Block -->
+    <img src="https://pngimg.com/uploads/cowboy_hat/cowboy_hat_PNG45.png" width="20px"> <!--- Inline -->
     <img src="https://pngimg.com/uploads/cowboy_hat/cowboy_hat_PNG45.png" width="20px">
     <img src="https://pngimg.com/uploads/cowboy_hat/cowboy_hat_PNG45.png" width="20px">
 </div>
@@ -42,7 +44,7 @@
 <div><h6> Hello World</h6></div>
 
  
-    <span >Hello World </span>
+    
  
 
 
