--- a/week3/htmlproject2wk3/index.html
+++ b/week3/htmlproject2wk3/index.html
@@ -11,7 +11,7 @@
     
     
     <nav>
-<a href="another.html">another</a>
+<a href="positioning.html.">pos</a>
     </nav>
     <header>
         <h1><span>Name</span> elements</h1>
