--- a/week5/pp2/image2/index.html
+++ b/week5/pp2/image2/index.html
@@ -18,7 +18,7 @@
       <div id="box1"class="boxred"></div>
       <div id="box2"class="boxblue"></div>
       <div id="box3"class="green"></div>
-      <div id="box4"class="boxviolet"></div>
+      <div id="box4"class="boxpurple"></div>
        <div id="box5"class="boxyellow"></div>
        </div>
       
